--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <div class="w-1/2">
                 <ul class="flex border-b">
                     <li class="-mb-px mr-1">
-                        <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#">Temperature</a>
+                        <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="./temp.html">Temperature</a>
                     </li>
                     <li class="mr-1">
-                        <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="#">Distance</a>
+                        <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="./distance.html">Distance</a>
                     </li>
                     <li class="mr-1">
-                        <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="#">Weight</a>
+                        <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="weight.html">Weight</a>
                     </li>
                 </ul>
             </div>
