Minor changes for consistancy

--- a/distance.html
+++ b/distance.html
@@ -61,6 +61,12 @@
                         <option>Inches</option>
                     </select>
                 </div>
+                <div class="mb-4">
+                    <label class="block text-gray-700 text-sm font-bold mb-2">
+                        Result
+                    </label>
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" disabled>
+                </div>
                 <div class="mt-8">
                     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Convert</button>
                 </div>
