--- a/distance.html
+++ b/distance.html
@@ -7,15 +7,14 @@
     <title>Distance</title>
 </head>
 <body>
-<!--create the same style here for a distance converter-->
 <div class="container mx-auto">
     <div class="flex justify-center pt-10">
         <div class="w-1/2">
             <ul class="flex border-b">
-                <li class="-mb-px mr-1">
+                <li class="mr-1">
                     <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="./temp.html">Temperature</a>
                 </li>
-                <li class="mr-1">
+                <li class="-mb-px mr-1">
                     <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#">Distance</a>
                 </li>
                 <li class="mr-1">
@@ -39,12 +38,7 @@
                     </label>
                     <select class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                         <option>Kilometers</option>
-                        <option>Meters</option>
-                        <option>Centimeters</option>
                         <option>Miles</option>
-                        <option>Yards</option>
-                        <option>Feet</option>
-                        <option>Inches</option>
                     </select>
                 </div>
                 <div class="mb-4">
@@ -53,19 +47,14 @@
                     </label>
                     <select class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
                         <option>Kilometers</option>
-                        <option>Meters</option>
-                        <option>Centimeters</option>
                         <option>Miles</option>
-                        <option>Yards</option>
-                        <option>Feet</option>
-                        <option>Inches</option>
                     </select>
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2">
                         Result
                     </label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" disabled>
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" readonly>
                 </div>
                 <div class="mt-8">
                     <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Convert</button>
