--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css">
     <title>Document</title>
 </head>
-<body>
+<body style ="background-color: #add8e6;">
 <div class="container mx-auto">
     <div class="flex justify-center pt-10">
         <div class="w-1/2">
