--- a/weight.html
+++ b/weight.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css">
   <title>Weight</title>
 </head>
-<body>
+<body style ="background-color: #add8e6;">
 <!-- create the weight page for me and link it-->
 <div class="container mx-auto">
   <div class="flex justify-center pt-10">
