Changed to single select component on html to make coding easier

--- a/distance.html
+++ b/distance.html
@@ -34,20 +34,11 @@
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2">
-                        From
+                        Conversion
                     </label>
                     <select class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                        <option>Kilometers</option>
-                        <option>Miles</option>
-                    </select>
-                </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">
-                        To
-                    </label>
-                    <select class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                        <option>Miles</option>  
-                        <option>Kilometers</option>
+                        <option>Kilometers to Miles</option>
+                        <option>Miles to Kilometers</option>
                     </select>
                 </div>
                 <div class="mb-4">
