--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1 class="text-4xl font-bold text-center mb-8">Converter Hub</h1>
         <div class="flex justify-center space-x-4">
             <a href="./temp.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Temperature</a>
-            <a href="./distance.html" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded">Distance</a>
-            <a href="./weight.html" class="bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded">Weight</a>
+            <a href="./distance.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Distance</a>
+            <a href="./weight.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Weight</a>
         </div>
     </div>
 </body>
