--- a/temp.html
+++ b/temp.html
@@ -34,20 +34,11 @@
         </div>
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2">
-            From
+            Conversion
           </label>
           <select class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-            <option>Celcius</option>
-            <option>Fahrenheit</option>
-          </select>
-        </div>
-        <div class="mb-4">
-          <label class="block text-gray-700 text-sm font-bold mb-2">
-            To
-          </label>
-          <select class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-            <option>Fahrenheit</option>
-            <option>Celcius</option>
+            <option>Celcius to Fahrenheit</option>
+            <option>Fahrenheit to Celcius</option>
           </select>
         </div>
         <div class="mb-4">
@@ -57,7 +48,7 @@
           <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" readonly>
         </div>
         <div class="mt-8">
-          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Convert</button>
+          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" >Convert</button>
         </div>
       </div>
     </div>
