--- a/weight.html
+++ b/weight.html
@@ -34,21 +34,12 @@
         </div>
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2">
-            From
+            Conversion
           </label>
           <select id="from" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-            <option value="kg">Kilograms</option>
-            <option value="lb">Pounds</option>
+            <option value="kg">Kilograms to Pounds</option>
+            <option value="lb">Pounds to Kilometers</option>
           </select>
-        </div>
-        <div class="mb-4">
-          <label class="block text-gray-700 text-sm font-bold mb-2">
-            To
-          </label>
-          <select id="to" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-            <option value="lb">Pounds</option>    
-            <option value="kg">Kilograms</option>
-            </select>
         </div>
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2">
