--- a/weight.html
+++ b/weight.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css">
   <title>Weight</title>
+  <script src="src/app.js"></script>
 </head>
 <body>
 <div class="container mx-auto">
@@ -30,15 +31,15 @@
           <label class="block text-gray-700 text-sm font-bold mb-2">
             Weight
           </label>
-          <input id="weight" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+          <input id="input" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
         </div>
         <div class="mb-4">
           <label class="block text-gray-700 text-sm font-bold mb-2">
             From
           </label>
-          <select id="from" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-            <option value="kg">Kilograms</option>
-            <option value="lb">Pounds</option>
+          <select id="select" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            <option>Kilograms to Pounds</option>
+            <option>Pounds to Kilograms</option>
           </select>
         </div>
         <div class="mb-4">
@@ -57,7 +58,7 @@
           <input id="result" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" readonly>
         </div>
         <div class="mt-8">
-          <button id="convert" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Convert</button>
+          <button onclick = "weightConversion()" id="convert" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Convert</button>
         </div>
         </div>
         </div>
