--- a/distance.html
+++ b/distance.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css">
     <title>Distance</title>
-    <script src ="app.js"></script>
+    <script src ="src/app.js"></script>
 </head>
 <body>
 <div class="container mx-auto">
