--- a/distance.html
+++ b/distance.html
@@ -7,53 +7,57 @@
     <title>Distance</title>
     <script src ="src/app.js"></script>
 </head>
-<body>
-<div class="container mx-auto">
-    <div class="flex justify-center pt-10">
-        <div class="w-1/2">
-            <ul class="flex border-b">
-                <li class="mr-1">
-                    <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="./temp.html">Temperature</a>
-                </li>
-                <li class="-mb-px mr-1">
-                    <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#">Distance</a>
-                </li>
-                <li class="mr-1">
-                    <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="weight.html">Weight</a>
-                </li>
-            </ul>
-        </div>
+<body class="bg-blue-100">
+    <div class="bg-blue-500 text-white py-4 text-center">
+        <h1 class="text-4xl font-bold">Converter Hub</h1>
     </div>
-    <div class="flex justify-center pt-10">
-        <div class="w-1/2">
-            <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">
-                        Distance
-                    </label>
-                    <input id="input" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">
-                        Conversion
-                    </label>
-                    <select id = "select" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                        <option>Kilometers to Miles</option>
-                        <option>Miles to Kilometers</option>
-                    </select>
-                </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">
-                        Result
-                    </label>
-                    <input id = "result" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" readonly>
-                </div>
-                <div class="mt-8">
-                    <button onclick = "distanceConversion()" class ="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Convert</button>
+    <div class="container mx-auto">
+        <div class="flex justify-center pt-10">
+            <div class="w-1/2">
+                <ul class="flex border-b">
+                    <li class="mr-1">
+                        <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="./temp.html">Temperature</a>
+                    </li>
+                    <li class="-mb-px mr-1">
+                        <a class="bg-blue-500 inline-block border-l border-t border-r rounded-t py-2 px-4 text-white font-semibold" href="#">Distance</a>
+                    </li>
+                    <li class="mr-1">
+                        <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="weight.html">Weight</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="flex justify-center pt-10">
+            <div class="w-1/2">
+                <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                    <div class="mb-4">
+                        <label class="block text-gray-700 text-sm font-bold mb-2">
+                            Distance
+                        </label>
+                        <input id="input" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 text-sm font-bold mb-2">
+                            Conversion
+                        </label>
+                        <select id="select" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                            <option>Kilometers to Miles</option>
+                            <option>Miles to Kilometers</option>
+                        </select>
+                    </div>
+                    <div class="mb-4">
+                        <label class="block text-gray-700 text-sm font-bold mb-2">
+                            Result
+                        </label>
+                        <input id="result" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" readonly>
+                    </div>
+                    <div class="mt-8">
+                        <button onclick="distanceConversion()" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Convert</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
 </body>
 </html>
