--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css">
     <title>Converter Hub</title>
 </head>
-<body class="bg-gray-100">
+<body class="bg-blue-100">
+
+    <!-- Header with blue background -->
+    <div class="bg-blue-500 text-white py-4 text-center">
+        <h1 class="text-4xl font-bold">Converter Hub</h1>
+    </div>
+
     <div class="container mx-auto p-8">
-        <h1 class="text-4xl font-bold text-center mb-8">Converter Hub</h1>
-        <div class="flex justify-center space-x-4">
-            <a href="./temp.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Temperature</a>
-            <a href="./distance.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Distance</a>
-            <a href="./weight.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Weight</a>
+
+        <!-- Conversion buttons with blue theme -->
+        <div class="flex justify-center space-x-4 mt-8">
+            <a href="./temp.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Temperature</a>
+            <a href="./distance.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Distance</a>
+            <a href="./weight.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Weight</a>
         </div>
     </div>
+
 </body>
 </html>
