--- a/weight.html
+++ b/weight.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css">
   <title>Weight</title>
-  <script src = "src/app.js"></script>
+  <script src="src/app.js"></script>
 </head>
-<body>
+<body class="bg-blue-100">
+  <div class="bg-blue-500 text-white py-4 text-center">
+    <h1 class="text-4xl font-bold">Converter Hub</h1>
+</div>
 <div class="container mx-auto">
   <div class="flex justify-center pt-10">
     <div class="w-1/2">
@@ -19,11 +22,13 @@
           <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-800 font-semibold" href="./distance.html">Distance</a>
         </li>
         <li class="-mb-px mr-1">
-          <a class="bg-white inline-block border-l border-t border-r rounded-t py-2 px-4 text-blue-700 font-semibold" href="#">Weight</a>
+          <a class="bg-blue-500 inline-block border-l border-t border-r rounded-t py-2 px-4 text-white font-semibold" href="#">Weight</a>
         </li>
       </ul>
     </div>
   </div>
+
+  <!-- Weight conversion form with blue theme -->
   <div class="flex justify-center pt-10">
     <div class="w-1/2">
       <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
@@ -49,9 +54,12 @@
           <input id="result" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" readonly>
         </div>
         <div class="mt-8">
-          <button onclick = "weightConversion()" id="convert" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Convert</button>
+          <button onclick="weightConversion()" id="convert" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Convert</button>
         </div>
-        </div>
-        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
