Final iteration need confirmation from others

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Header with blue background -->
     <div class="bg-blue-500 text-white py-4 text-center">
-        <h1 class="text-4xl font-bold">Converter Hub</h1>
+        <h1 class="text-4xl font-bold"><a href="./index.html">Converter Hub</a></h1>
     </div>
 
     <div class="container mx-auto p-8">
