--- a/distance.html
+++ b/distance.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-blue-100">
     <div class="bg-blue-500 text-white py-4 text-center">
-        <h1 class="text-4xl font-bold">Converter Hub</h1>
+        <h1 class="text-4xl font-bold"><a href="./index.html">Converter Hub</a></h1>
     </div>
     <div class="container mx-auto">
         <div class="flex justify-center pt-10">
