--- a/temp.html
+++ b/temp.html
@@ -27,7 +27,7 @@
       </ul>
     </div>
   </div>
-  <div class="flex justify-center pt-10">
+  <div class="flex justify-center">
     <div class="w-1/2">
       <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
