--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.9.6/tailwind.min.css">
     <title>Converter Hub</title>
 </head>
-<body class="bg-blue-100">
-    <div class="bg-blue-500 text-white py-4 text-center">
-        <h1 class="text-4xl font-bold"><a href="./index.html">Converter Hub</a></h1>
+<body style="background-image: url('./assets/wave3.jpg'); background-size: cover; background-repeat: no-repeat;">
+<div class="bg-365486-500 text-white py-4 text-center">
+    <h1 class="text-4xl font-bold pt-6"><a href="./index.html">Welcome To</a></h1>
+    <h1 class="text-4xl font-bold"><a href="./index.html">Converter Hub</a></h1>
+</div>
+<div class="container mx-auto p-8">
+    <div class="flex justify-center space-x-4 mt-8">
+        <a href="./temp.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Temperature</a>
+        <a href="./distance.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Distance</a>
+        <a href="./weight.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Weight</a>
     </div>
-    <div class="container mx-auto p-8">
-        <div class="flex justify-center space-x-4 mt-8">
-            <a href="./temp.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Temperature</a>
-            <a href="./distance.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Distance</a>
-            <a href="./weight.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">Weight</a>
-        </div>
-    </div>
+</div>
 </body>
 </html>
