please be the last one in shallah

--- a/distance.html
+++ b/distance.html
@@ -7,7 +7,7 @@
     <title>Distance</title>
     <script src ="src/app.js"></script>
 </head>
-<body class="bg-blue-100">
+<body style="background-image: url('./assets/wave3.jpg'); background-size: cover; background-repeat: no-repeat;">
     <div class="bg-blue-500 text-white py-4 text-center">
         <h1 class="text-4xl font-bold"><a href="./index.html">Converter Hub</a></h1>
     </div>
